[package]
name = "wasm_dwarf_lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gimli = "0.32.0"
serde_json = "1.0.140"
wit-bindgen-rt = "0.43.0"
object = { version = "0.37.1", features = ["wasm", "write"] }

[dev-dependencies]
wat = { version = "1.235.0", features = ["dwarf"] }

[build-dependencies]
wit-bindgen = "0.43.0"
